# SoftlyTranscode

./: .gitignore  CMakeLists.txt  README.md  cPackInstall.cmake  config.h.in
include/: FFmpegDecoder.h  FFmpegUtil.h  RtpSess.h  adts_header.hpp  config.h  encoder.h  fdkTry.h  fdk_dec.h  fdk_demo.hpp  fdk_enc.h  mixer.h  muxer.h  rtpRecv.h  rtpSender.h  transcode.h  wav_reader.h  wav_reader.hpp  wav_writer.hpp
include/seeker/: common.h  logger.h  socketUtil.h
src/: FFmpegDecoder.cpp  RtpSess.cpp  audio_avfilter.cpp  audio_filter.cpp  dash_encoder.cpp  encoder.cpp  fdkTry.cpp  fdk_dec.cpp  fdk_enc.cpp  hls_encoder.cpp  main.cpp  mixer.cpp  muxer.cpp  muxing.cpp  remuxing.cpp  rtpRecv.cpp  rtpSender.cpp  test_dec.cpp  test_enc.cpp  wav_reader.cpp
